RemoteCompanion/build_output.txt
[0;36m==> [1;36mNotice:[m Build may be slow as Theos isn’t using all available CPU cores on this computer. Consider upgrading GNU Make: https://theos.dev/docs/parallel-building
[1;31m> [1;3;39mMaking all for application RemoteCompanion…[m
[0;35m==> [1;39mCopying resource files into the application wrapper…[m
[0;32m==> [1;39mCompiling main.m (arm64)…[m
[0;32m==> [1;39mCompiling RCAppDelegate.m (arm64)…[m
[0;32m==> [1;39mCompiling RCConfigManager.m (arm64)…[m
[0;32m==> [1;39mCompiling RCTriggersViewController.m (arm64)…[m
[0;32m==> [1;39mCompiling RCActionsViewController.m (arm64)…[m
[1mRCActionsViewController.m:18:17: [0m[0;1;31merror: [0m[1mmethod 'tableView:itemsForBeginningDragSession:atIndexPath:' in protocol 'UITableViewDragDelegate' not implemented [-Werror,-Wprotocol][0m
   18 | @implementation RCActionsViewController[0m
      | [0;1;32m                ^
[0m[1m/Volumes/External/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.2.sdk/System/Library/Frameworks/UIKit.framework/Headers/UITableView.h:615:1: [0m[0;1;36mnote: [0mmethod 'tableView:itemsForBeginningDragSession:atIndexPath:' declared here[0m
  615 | - (NSArray<UIDragItem *> *)tableView:(UITableView *)tableView itemsForBeginningDragSession:(id<UIDragSession>)session atIndexPath:(NSIndexPath *)indexPath;[0m
      | [0;1;32m^
[0m1 error generated.
make[3]: *** [/Users/chrislapointe/Projects/CurrentProjects/RemoteCompanion/RemoteCompanion/.theos/obj/arm64/RCActionsViewController.m.231821a7.o] Error 1
make[2]: *** [/Users/chrislapointe/Projects/CurrentProjects/RemoteCompanion/RemoteCompanion/.theos/obj/arm64/RemoteCompanion.app/RemoteCompanion] Error 2
make[1]: *** [internal-application-all_] Error 2
make: *** [RemoteCompanion.all.application.variables] Error 2
